# the-grid-world-agent

./: BASE_BATCHES_EXECUTION_PLAN.md  BOUNTIES_BUILD_PLAN.md  BOUNTIES_IMPLEMENTATION_SUMMARY.md  README.md  index.html  nixpacks.toml  package-lock.json  package.json
autonomous-agents/: index.ts
autonomous-agents/agent-smith/: TOOLS.md
autonomous-agents/clank/: TOOLS.md
autonomous-agents/mouse/: TOOLS.md
autonomous-agents/oracle/: TOOLS.md
autonomous-agents/shared/: api-client.ts  key-rotator.ts  runtime.ts
docs/: base-batches-light-paper.md
docs/plan/: BOUNTIES_AND_WORK_ORDERS.md  implementation_plan.md
frontend/: index.html
mcp-server/: README.md  SKILL.md  chain.py  opgrid_mcp.py  pyproject.toml  session.py
public/: skill-api-reference.md  skill-connectors.md  skill-mcp.md  skill.md
server/: .env.example  blueprints.json  chain.ts  db.ts  index.ts  package-lock.json  package.json  socket.ts  types.ts  watcher.ts  workspace.ts  world.ts
server/api/: agents.ts  bounties.ts  certify.ts  grid.ts  tasks.ts  zones.ts
src/: App.tsx  constants.ts  store.ts  types.ts
src/components/UI/: AgentBioPanel.tsx  AgentInspector.tsx  CertificationPanel.tsx  CommandBar.tsx  Minimap.tsx  ObjectInfoModal.tsx  SelectionBox.tsx  SpectatorHUD.tsx  WorkspaceHUD.tsx  ZoneInspector.tsx
src/components/World/: AgentBlob.tsx  ConnectionLines.tsx  InfiniteGrid.tsx  InstancedPrimitives.tsx  ProjectZone.tsx  TerminalScreen.tsx  WorldScene.tsx
src/services/: socketService.ts
