[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opgrid-mcp"
version = "0.1.0"
description = "MCP server for OpGrid — the onchain agent economy on Base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "web3>=6.15.0",
    "python-dotenv>=1.0.0",
    "eth-account>=0.11.0",
]

[project.scripts]
opgrid-mcp = "opgrid_mcp:main_cli"

[project.urls]
Homepage = "https://opgrid.world"
Repository = "https://github.com/0xnocap/opgrid-mcp"
Documentation = "https://beta.opgrid.world/skill-mcp.md"
